Pin caddy & docker-proxy versions

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-CADDY_DOCKER_PROXY_TAG=2.8.2-alpine
+# Docker tag
+CADDY_DOCKER_TAG=2.7.4
+# Github tag imported by xcaddy
+CADDY_DOCKER_PROXY_PLUGIN=v2.8.6
+# Github tag imported by xcaddy
+CADDY_GANDI_PLUGIN=v1.0.2
