--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - caddy_data:/data
-      - /home/mafro/.step/certs/root_ca.crt:/root/step_ca.crt:ro
+      - /home/mafro/.step/certs/root_ca.crt:/root/step_ca.crt:ro  # Referenced by containers using the proxy
+      - /home/mafro/.step/certs/root_ca.crt:/etc/ssl/certs/step_ca.crt:ro  # Local trust for Step CA
     labels:
       caddy.email: dev@mafro.net
       caddy.log.format: console  # Human readable, not JSON
