--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 ---
 volumes:
-  caddy_data: {}
+  caddy-data: {}
+  tailscale-data: {}
 
 networks:
   caddy:
@@ -21,6 +22,7 @@ services:
     restart: unless-stopped
     environment:
       - CADDY_INGRESS_NETWORKS=caddy
+      - TS_AUTHKEY
     env_file:
       - .secrets
     ports:
@@ -32,7 +34,8 @@ services:
       ca.mafro.net: 192.168.1.198  # Caddy needs to reach internal CA
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - caddy_data:/data
+      - caddy-data:/data
+      - tailscale-data:/ts
       - /etc/step_root_ca.crt:/root/step_ca.crt:ro  # Referenced by containers using the proxy
       - /etc/step_root_ca.crt:/etc/ssl/certs/step_ca.crt:ro  # Local trust for Step CA
     labels:
